[Fix] Excel export now not showing error message, correctly works with cyrillic letters, numbers.

--- a/ChessTourManager.WEB/Views/Shared/_Layout.cshtml.css
+++ b/ChessTourManager.WEB/Views/Shared/_Layout.cshtml.css
@@ -37,3 +37,9 @@ button.accept-policy {
     white-space: nowrap;
     line-height: 60px;
 }
+
+.action-buttons {
+    display: flex;
+    justify-content: space-between;
+    background: white;
+}
